--- a/client/src/components/Views/LandingPage/LandingPage.scss
+++ b/client/src/components/Views/LandingPage/LandingPage.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('../../assets/bacgroundPokemon.jpg');
+    background-image: url('../../../assets/bacgroundPokemon.jpg');
     background-size: cover;
     background-position: center;
     color:rgb(250, 252, 254);
