--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -1,28 +1,39 @@
-/* src/styles/navbar.scss */
-
 .navbar {
-    background-color: #333;
-    padding: 10px 20px;
+    width: 85%;
+    background-color: $primary-color;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px 25px;
+    font-family: $body-font;
+    border-radius: 8px;
   }
   
   .navbar-nav {
-    list-style-type: none;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content:flex-end;
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
   
   .nav-item {
-    margin-right: 20px;
+    margin: 0 1rem;
   }
   
-  .nav-link {
-    color: #fff;
+  .nav_link {
+    color: #0294fc;
     text-decoration: none;
-    font-weight: bold;
-  }
+    font-size: 1rem;
+    padding: 0.5rem;
+    transition: color 0.3s ease, background-color 0.3s ease;
   
-  .nav-link:hover {
-    text-decoration: underline;
+    &:hover {
+      color: #fff;
+      background-color: #49017f;
+    }
+  
+    &.active {
+      color: #fff;
+      background-color: #5faafb;
+    }
   }
   
