--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -6,7 +6,7 @@
 body {
   font-family: $body-font;
   color: $text-color;
-  background-color: $background-color;
+  background: $background-color;
   margin: 0;
   padding: $spacing-medium;
 }
@@ -22,7 +22,21 @@ body {
   body {
     padding: $spacing-small;
   }
+
+  .cards-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar {
+    flex-direction: column; // Ajusta la dirección de la navbar
+    align-items: flex-start;
+  }
+  
+  .searchbar-container {
+    width: 100%; // Asegúrate de que ocupe todo el ancho
+  }
 }
+
 
 
 
