--- a/client/src/components/SearchBar/SearchBar.scss
+++ b/client/src/components/SearchBar/SearchBar.scss
@@ -1,82 +1,89 @@
 .searchbar-container {
-    display: flex;
-    width: 86%;
-    margin: 10px 10px;
-    flex-direction: column;
-    align-items:flex-start;
-    padding: 1rem;
-    background-color: $primary-color;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    @include responsive-layout(768px)
-  }
-  
+  background-color: $primary-color; // Fondo negro
+  max-width: 80%;
+  padding: 20px;
+  border-radius: $border-radius;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); // Sombra sutil
+  display: flex;
+  flex-direction:row;
+
+  gap: 1rem; // Espaciado entre elementos
+
   form {
     display: flex;
+    gap: 1rem; // Espaciado entre el campo de texto y el botón
     align-items: center;
-    margin-bottom: 1rem;
 
-    @include responsive-layout(768px)
-  }
-  
-  .search-input {
-    background-color: $primary-color;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    outline: none;
-    transition: border-color 0.3s;
-  
-    &:focus {
-      border-color: $secondary-color;
-    }
-  
-    &::placeholder {
-        background-color: $primary-color;
+    .search-input {
+      flex: 1;
+      padding: 0.5rem;
+      border: 1px solid $secondary-color;
+      border-radius: $border-radius;
+      background-color: $primary-color;
       color: $secondary-color;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
+
+      &::placeholder {
+        color: $text-color; // Color del texto del placeholder
+      }
+
+      &:focus {
+        border-color: $secondary-color;
+        outline: none;
+      }
+    }
+
+    .search-button {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: $border-radius;
+      background-color: $secondary-color;
+      color: $primary-color;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: $text-color; // Color gris claro al pasar el ratón
+        color: $primary-color;
+      }
     }
   }
-  
-  .search-button {
-    margin-left: 0.5rem;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    color: $secondary-color;
-    background-color: #09427f;
-    border: 1px solid #ccc;;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  
-    &:hover {
-      background-color: #a6c6e8;
-    }
-  }
-  
+
   .filter-container {
     display: flex;
-    justify-content: center;
-    gap: 1rem;
+    gap: 1rem; // Espaciado entre los selectores
+    flex-wrap: wrap;
 
-    @include responsive-layout(768px) 
-    }
-  
+    .filter-select {
+      padding: 0.5rem;
+      border: 1px solid $secondary-color;
+      border-radius: $border-radius;
+      background-color: $primary-color;
+      color: $secondary-color;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
 
-  
-  .filter-select {
-    background-color: $primary-color;
-    color: $secondary-color;
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    outline: none;
-    transition: border-color 0.3s;
-  
-    &:focus {
-      border-color: $primary-color;
+      &:focus {
+        border-color: $secondary-color;
+        outline: none;
+      }
     }
   }
+}
 
+// Media queries para ajustar el diseño en diferentes tamaños de pantalla
+@media (max-width: 768px) {
+  .searchbar-container {
+    padding: 0.5rem;
+    form {
+      flex-direction: row;
+      gap: 0.5rem; // Espaciado reducido en pantallas pequeñas
+    }
+    .filter-container {
+      flex-direction: column;
+    }
+  }
+}
   
