--- a/client/src/components/Views/HomePage/HomePage.scss
+++ b/client/src/components/Views/HomePage/HomePage.scss
@@ -1,14 +1,25 @@
-.home-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    @include responsive-layout(768);
-  
-    h1 {
-      color: $text-color;
-      font-size: $base-font-size;
-    }
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  padding: 20px;
+  gap:20px;
+
+  @media (max-width: 768) {
+    padding: 10px;
   }
+  // justify-content: flex-start;
+  // min-height: 100vh;
+  // padding: $spacing-medium;
+  // background-color: $secondary-color;
+
+  // @include responsive-layout(768px);
+
+  // > * {
+  //   margin: $spacing-medium 0;
+  // }
+}
+
+ 
   
