--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,18 +1,12 @@
 // variables.scss
 // Colores
 $primary-color: #050505;
-$secondary-color: #f4f5fa;
-$background-color: linear-gradient(
-    to left, 
-    rgb(5, 212, 254) 0%,
-    rgb(9, 40, 155) 100%,
-
-);
-$text-color: #696d69;
+$secondary-color: #f0f0f0;
+$background-color: #023a68;
+$text-color: #e0e0e0;
 
 // Fuentes y Tamaños
 $body-font: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-$heading-font: 'Avenir', 'Helvetica', sans-serif;
 $base-font-size: 16px;
 
 // Espaciado y Dimensiones
@@ -22,6 +16,6 @@ $spacing-large: 24px;
 $max-width: 1280px;
 
 // Otros
-$border-radius: 4px; // Definimos el border radius aquí si lo necesitas
+$border-radius: 25px;
 
 
