--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 // Estilos globales
 body {
+  align-items: center;
   font-family: $body-font;
   color: $text-color;
   background: $background-color;
