--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -3,14 +3,14 @@
 .navbar {
   background-color: $primary-color; // Color negro
   width:85%;
-  padding: 1rem 2rem; // Espaciado interno
+  padding: 20px; // Espaciado interno
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); // Sombra sutil
   border-radius: $border-radius; // Bordes redondeados
-  
+  margin: 20px 50px;
 
   .navbar-nav {
     display: flex;
-    justify-content: flex-end; // Espaciado igual entre los elementos
+    justify-content: flex-end; 
     list-style: none;
     margin: 0;
     padding: 0;
