Funcional y en revisión / estilos 85% Done

--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -16,6 +16,7 @@
     &:hover {
       transform: scale(1.05);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Agregar sombra al pasar el cursor
+      border: none;
     }
     
     // Estilos responsivos
