--- a/client/src/components/Views/DetailPage/DetailPage.scss
+++ b/client/src/components/Views/DetailPage/DetailPage.scss
@@ -4,50 +4,61 @@
   flex-direction: row;
   padding: 50px 50px;
   align-items: center;
-  width: 70%;
+  width: 80%;
   background-color: $primary-color; 
   border-radius: $border-radius;
-  margin: 20px 150px;
+  margin: 20px 50px;
 
-  @media (max-width: 768) {
-    padding: 10px;
-  }
 
-  .pokemon-detail-image {
-    max-width: 250px; // Limitar el tamaño de la imagen
-    border-radius: 10px; // Bordes redondeados
-    margin-bottom: 20px; // Espacio debajo de la imagen
-  }
+p {
+  font-family: $body-font;
+  font-size: $base-font-size; 
+  font-weight: bolder;
+  color: $secondary-color;
+  justify-content: center;
+}
 
-  p {
-    font-family: $body-font;
-    font-size: $base-font-size; // Tamaño de fuente estándar para los detalles
-    font-weight: bolder;
-    color: $secondary-color;
-    justify-content: center;
-  }
+.pokemon-detail-types {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
 
-  .pokemon-detail-types {
-    margin: 10px 10px;
-
-    .pokemon-detail-type {
-      display: inline-block;
-      background-color: $secondary-color; // Gris claro
-      color: $primary-color;
-      border-radius: $border-radius; // Usar la variable global
-      padding: 4px 8px;
-      margin: 10px;
-      font-size: 14px;
-    }
-  }
-
-  .pokemon_stats {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    //justify-content:center;
-    width: 200px;
+  .pokemon-detail-type {
+    background-color: $secondary-color; // Gris claro
+    color: $primary-color;
+    border-radius: $border-radius; 
+    padding: 8px;
     margin: 25px;
+    font-size: 18px;
   }
 }
+
+.pokemon_stats {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  //justify-content:center;
+  width: 200px;
+  margin: 25px;
+}
+.pokemon-detail-image {
+  max-width: 25%; 
+  border-radius: $border-radius; 
+  margin: 25px; 
+}
+
+
+   // Estilos responsivos
+   @include responsive-layout(768px) {
+    flex-direction: column;
+    width: 150px; // Ajustar el ancho
+    height: fit-content;
+  }
+  
+  @include responsive-layout(480px) {
+    width: 120px;
+    height: fit-content;
+  }
+}
+
 
